All htlm elemets had been added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="maincont">
 
 			<section id=mainsection>
-					<h1 id="largeHding"></h1>
+					<h1 id="largeHding">About Me</h1>
 					
 					<img src="images/mypicture.img" alt="Carlos Castro profile picture">
 					
@@ -31,7 +31,7 @@
 					<h2 id="connect"> Connect with me </h2>
 
 					<img src="images/mypicture.img" alt="github">
-					<img src="images/mypicture.img" alt="linkein">
+					<img src="images/mypicture.img" alt="linkedin">
 					<img src="images/mypicture.img" alt="stackoverflow">
 
 	
@@ -45,7 +45,10 @@
 	</div>
 
 
-	<div id="logo"> </div>
+	<div id="logo"> 
+		<h1> Carlos Castro </h1>
+
+	</div>
 
 	<nav> 
 		<ul>
