--- a/portfolio.html
+++ b/portfolio.html
@@ -15,23 +15,23 @@
 			<section id=mainsection>
 					<h1 id="largeHding">Portfolio</h1>
 					
-					<img id="hangPict" src="" height="200px" width="200px" alt="The Hangman game">
+					<img id="hangPict" src="assets/images/hang.jpg" height="150px" width="300px" alt="The Hangman game">
 					<h3 id="hangBar" class="projects"> Hangman </h3> 
 
 
-					<img id="rpgPict" src="" height="200px" width="200px" alt="The RPG Game ">
+					<img id="rpgPict" src="assets/images/rpg.jpg" height="150px" width="300px" alt="The RPG Game ">
 					<h3 id="rprgBar" class="projects"> RPG Game </h3> 
 
 
-					<img id="triviapict" src="" height="200px" width="200px" alt="The Trivia Game">
+					<img id="triviapict" src="assets/images/trivia.jpg" height="150px" width="300px" alt="The Trivia Game">
 					<h3 id="triviaBar" class="projects"> Trivia Game </h3> 
 
 
-					<img id="rutgerspict" src="" height="200px" width="200px" alt="Rutgers Info Widget">
+					<img id="rutgerspict" src="assets/images/rutgers.jpg" height="150px" width="300px" alt="Rutgers Info Widget">
 					<h3 id="rutgersBar" class="projects"> Rutgers Info Widget </h3> 
 
 
-					<img id="prspict" src="" height="200px" width="200px" alt="The Paper Rock Sissors Game">
+					<img id="prspict" src="assets/images/rockpaper.jpg" height="150px" width="300px" alt="The Paper Rock Sissors Game">
 					<h3 id="prsBar" class="projects"> Rock Paper Sissors </h3> 
 
 
@@ -42,9 +42,9 @@
 
 					<h2 id="connect"> Connect with me </h2>
 
-					<img src="images/mypicture.img" alt="github">
-					<img src="images/mypicture.img" alt="linkedin">
-					<img src="images/mypicture.img" alt="stackoverflow">
+					<img src="assets/images/git.png" alt="github">
+					<img src="assets/images/link.png" alt="linkedin">
+					<img src="assets/images/stack.png" alt="stackoverflow">
 
 	
 			</section>
