--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
 
 					<h2 id="connect"> Connect with me </h2>
 
-					<img src="images/mypicture.img" alt="github">
-					<img src="images/mypicture.img" alt="linkedin">
-					<img src="images/mypicture.img" alt="stackoverflow">
+					<img src="assets/images/git.png" alt="github">
+					<img src="assets/images/link.png" alt="linkedin">
+					<img src="assets/images/stack.png" alt="stackoverflow">
 
 	
 			</section>
