--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<section id=mainsection>
 					<h1 id="largeHding">About Me</h1>
 					
-					<img src="images/mypicture.img" alt="Carlos Castro profile picture">
+					<img src="assets/images/mypicture.jpg" alt="Carlos Castro profile picture">
 					
 					<p> 
 						My personal information	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -30,9 +30,9 @@
 
 					<h2 id="connect"> Connect with me </h2>
 
-					<img src="images/mypicture.img" alt="github">
-					<img src="images/mypicture.img" alt="linkedin">
-					<img src="images/mypicture.img" alt="stackoverflow">
+					<img src="assets/images/git.png" alt="github">
+					<img src="assets/images/link.png" alt="linkedin">
+					<img src="assets/images/stack.png" alt="stackoverflow">
 
 	
 			</section>
