CSS structure added

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
 
 					<h2 id="connect"> Connect with me </h2>
 
-					<img src="assets/images/git.png" alt="github">
-					<img src="assets/images/link.png" alt="linkedin">
-					<img src="assets/images/stack.png" alt="stackoverflow">
+					<img src="assets/images/git.png" alt="github" class="medialogos">
+					<img src="assets/images/link.png" alt="linkedin" class="medialogos">
+					<img src="assets/images/stack.png" alt="stackoverflow" class="medialogos">
 
 	
 			</section>
