--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<section id=mainsection>
 					<h1 id="largeHding">About Me</h1>
 					
-					<img src="assets/images/mypicture.jpg" alt="Carlos Castro profile picture">
+					<img src="assets/images/mypicture.jpg" alt="Carlos Castro profile picture" id="mypicture">
 					
 					<p> 
 						My personal information	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -30,9 +30,9 @@
 
 					<h2 id="connect"> Connect with me </h2>
 
-					<img src="assets/images/git.png" alt="github">
-					<img src="assets/images/link.png" alt="linkedin">
-					<img src="assets/images/stack.png" alt="stackoverflow">
+					<img src="assets/images/git.png" alt="github" class="medialogos">
+					<img src="assets/images/link.png" alt="linkedin" class="medialogos">
+					<img src="assets/images/stack.png" alt="stackoverflow" class="medialogos">
 
 	
 			</section>
@@ -41,7 +41,7 @@
 	<div id="tealbar"> </div>
 
 	<div id=graybar>
-		<p> Copyright 2017 Carlos Castro </p>
+		<p id="copyright"> Copyright 2017 Carlos Castro </p>
 	</div>
 
 
