Fonts and colors defined

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="maincont">
 
 			<section id=mainsection>
-					<h1 id="largeHding">About Me</h1>
+					<h1 id="largeHeding">About Me</h1>
 					
 					<img src="assets/images/mypicture.jpg" alt="Carlos Castro profile picture" id="mypicture">
 					
@@ -46,7 +46,7 @@
 
 
 	<div id="logo"> 
-		<h1> Carlos Castro </h1>
+		<h1 class="logo"> Carlos Castro </h1>
 
 	</div>
 
