--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	<div id="maincont">
 
 			<section id=mainsection>
-					<h1 id="largeHding">Contact</h1>
+					<h1 id="largeHeding">Contact</h1>
 					
 					<h2> Name </h2>
 						<input type="text" name="full name">
@@ -43,12 +43,12 @@
 	<div id="tealbar"> </div>
 
 	<div id=graybar>
-		<p> Copyright 2017 Carlos Castro </p>
+		<p id="copyright"> Copyright 2017 Carlos Castro </p>
 	</div>
 
 
 	<div id="logo"> 
-		<h1> Carlos Castro </h1>
+		<h1 class="logo"> Carlos Castro </h1>
 
 	</div>
 
