--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 	<div id="maincont">
 
 			<section id=mainsection>
-					<h1 id="largeHding">Portfolio</h1>
+					<h1 id="largeHeding">Portfolio</h1>
 					
 					<img id="hangPict" src="assets/images/hang.jpg" height="150px" width="300px" alt="The Hangman game">
 					<h3 id="hangBar" class="projects"> Hangman </h3> 
@@ -53,12 +53,12 @@
 	<div id="tealbar"> </div>
 
 	<div id=graybar>
-		<p> Copyright 2017 Carlos Castro </p>
+		<p id="copyright"> Copyright 2017 Carlos Castro </p>
 	</div>
 
 
 	<div id="logo"> 
-		<h1> Carlos Castro </h1>
+		<h1 class="logo"> Carlos Castro </h1>
 
 	</div>
 
