--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 
 
 <body>
+	<div id="content">
 	<div id="whiteBar"></div>
 
 	<div id="maincont">
@@ -27,7 +28,8 @@
 
 					<input type="submit" name="sumbmit">
 								
-			
+			</section>
+
 			<section id="mediasection">
 
 					<h2 id="connect"> Connect with me </h2>
@@ -59,6 +61,7 @@
 			<li> Contact </li>
 
 		</ul>
-
+	</nav>
+</div>
 </body>
 </html>
