--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 <body>
+<div id="content">
 	<div id="whiteBar"></div>
 
 	<div id="maincont">
@@ -17,14 +18,16 @@
 					
 					<img src="assets/images/mypicture.jpg" alt="Carlos Castro profile picture" id="mypicture">
 					
-					<p> 
+					<p id="myprofile"> 
 						My personal information	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>			
+					</p>	
+			</section>		
+			
 			
 			<section id="mediasection">
 
@@ -33,8 +36,6 @@
 					<img src="assets/images/git.png" alt="github" class="medialogos">
 					<img src="assets/images/link.png" alt="linkedin" class="medialogos">
 					<img src="assets/images/stack.png" alt="stackoverflow" class="medialogos">
-
-	
 			</section>
 	
 
@@ -57,6 +58,7 @@
 			<li> Contact </li>
 
 		</ul>
-
+	</nav>
+</div>
 </body>
 </html>
