--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
 
 
 <body>
+	<div id="content">
 	<div id="whiteBar"></div>
 
 	<div id="maincont">
@@ -36,7 +37,7 @@
 
 
 					
-			
+			</section>
 
 			<section id="mediasection">
 
@@ -69,6 +70,7 @@
 			<li> Contact </li>
 
 		</ul>
-
+	</nav>
+</div>
 </body>
 </html>
