Lay out on Portfolio completed

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,24 +16,41 @@
 				<section id="mainsection">
 						<h1 id="largeHeding">Portfolio</h1>
 						
-						<img id="hangPict" src="assets/images/hang.jpg" alt="The Hangman game">
-						<h3 id="hangBar" class="projects"> Hangman </h3> 
+
+						<div  id="hangman">
+							<div class="banner">
+								<h3 class="bar" > Hangman </h3> 
+							</div>
+						</div>
 
 
-						<img id="rpgPict" src="assets/images/rpg.jpg" alt="The RPG Game">
-						<h3 id="rprgBar" class="projects"> RPG Game </h3> 
+						<div  id="rpg">
+							<div class="banner">
+								<h3 class="bar" > RPG Game </h3> 
+							</div>
+						</div>
 
 
-						<img id="triviapict" src="assets/images/trivia.jpg" alt="The Trivia Game">
-						<h3 id="triviaBar" class="projects"> Trivia Game </h3> 
+						<div  id="trivia">
+							<div class="banner">
+								<h3 class="bar" > Trivia </h3> 
+							</div>
+						</div>
 
 
-						<img id="rutgerspict" src="assets/images/rutgers.jpg" alt="Rutgers Info Widget">
-						<h3 id="rutgersBar" class="projects"> Rutgers Info Widget </h3> 
+						<div  id="rutgers">
+							<div class="banner">
+								<h3 class="bar" > Rutgers Info Widget </h3> 
+							</div>
+						</div>
 
 
-						<img id="prspict" src="assets/images/rockpaper.jpg" alt="The Paper Rock Sissors Game">
-						<h3 id="prsBar" class="projects"> Rock Paper Sissors </h3> 				
+						<div  id="rock">
+							<div class="banner">
+								<h3 class="bar" > Rock Paper Sissors </h3> 
+							</div>
+						</div>
+									
 				</section>
 
 
