--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
 				<section id="mainsection">
 						<h1 id="largeHeding">Contact</h1>
 						
+						<div id= "formcontainer">
 						<h2> Name </h2>
 							<input type="text" name="full name">
 
@@ -23,18 +24,19 @@
 							<input type="text" name="Email">
 		
 						<h2> Message </h2>
-							<textarea name="message" rows="10" cols="48"></textarea>
+							<textarea name="message" rows="10" cols="68"></textarea>
 
-						<input type="submit" name="sumbmit">									
+						</div>
+						<input id="button" type="submit" name="sumbmit">									
 				</section>
 
 
 				<section id="mediasection">
 						<h2 id="connect"> Connect with Me </h2>
 
-						<img src="assets/images/git.png" alt="github" class="medialogos">
-						<img src="assets/images/link.png" alt="linkedin" class="medialogos">
-						<img src="assets/images/stack.png" alt="stackoverflow" class="medialogos">		
+						<a href="https://github.com/" target="blank"> <img src="assets/images/git.png" alt="github" class="medialogos"> </a>
+						<a href="https://www.linkedin.com/" target="blank"> <img src="assets/images/link.png" alt="linkedin" class="medialogos"> </a>
+						<a href="http://stackoverflow.com/" target="blank"> <img src="assets/images/stack.png" alt="stackoverflow" class="medialogos" id="stack"> </a>	
 				</section>
 		</div>
 
@@ -45,17 +47,18 @@
 			<p id="copyright"> Copyright 2017 Carlos Castro </p>
 		</div>
 
-
-		<div id="logo"> 
-			<h1 class="logo"> Carlos Castro </h1>
+		<div id="box"> 
+			<div id="frame">
+				<h1 id="mynametext"> Carlos Castro </h1>
+			</div>
 		</div>
 
 
 		<nav> 
 			<ul>
-				<li> About </li>
-				<li> Portfolio </li>
-				<li> Contact </li>
+				<li><a href="index.html"> About </a> </li>
+				<li><a href="portfolio.html"> Portfolio </a> </li>
+				<li><a href="contact.html"> Contact </a> </li>
 
 			</ul>
 		</nav>
