--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 	<div id="content">
 		<div id="whiteBar"></div>
 
-		
+				
 		<div id="maincont">
 				<section id="mainsection">
 						<h1 id="largeHeding">Portfolio</h1>
@@ -57,9 +57,9 @@
 				<section id="mediasection">
 						<h2 id="connect"> Connect with Me </h2>
 
-						<img src="assets/images/git.png" alt="github" class="medialogos">
-						<img src="assets/images/link.png" alt="linkedin" class="medialogos">
-						<img src="assets/images/stack.png" alt="stackoverflow" class="medialogos">
+						<a href="https://github.com/" target="blank"> <img src="assets/images/git.png" alt="github" class="medialogos"> </a>
+						<a href="https://www.linkedin.com/" target="blank"> <img src="assets/images/link.png" alt="linkedin" class="medialogos"> </a>
+						<a href="http://stackoverflow.com/" target="blank"> <img src="assets/images/stack.png" alt="stackoverflow" class="medialogos"> </a>
 				</section>
 		</div>
 
@@ -70,18 +70,19 @@
 				<p id="copyright"> Copyright 2017 Carlos Castro </p>
 		</div>
 
-
-		<div id="logo"> 
-			<h1 class="logo"> Carlos Castro </h1>
-
+		<div id="box"> 
+			<div id="frame">
+				<h1 id="mynametext"> Carlos Castro </h1>
+			</div>
 		</div>
+		
 
 
 		<nav> 
 			<ul>
-				<li> About </li>
-				<li> Portfolio </li>
-				<li> Contact </li>
+				<li><a href="index.html"> About </a> </li>
+				<li><a href="portfolio.html"> Portfolio </a> </li>
+				<li><a href="contact.html"> Contact </a> </li>
 
 			</ul>
 		</nav>
