--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 
 <body>
 	<div id="content">
-		<div id="whiteBar"></div>
+		
+		<div id="whiteBar">
+			<div id="left">
+				<div id="box"> 
+					<div id="frame">
+						<h1 id="mynametext"> Carlos Castro </h1>
+					</div>
+				</div>
+			</div>
+
+			<div id="right">
+			<nav> 
+				<ul>
+					<li><a href="index.html"> About </a> </li>
+					<li><a href="portfolio.html"> Portfolio </a> </li>
+					<li><a href="contact.html"> Contact </a> </li>
+				</ul>
+			</nav>
+
+			</div>
+
+		</div>
 		
 
 		<div id="maincont">
@@ -51,29 +72,14 @@
 				</section>
 		</div>
 
-
+	<div class="footer">	
 		<div id="tealbar"> </div>
 
-
 		<div id="graybar">
-				<p id="copyright"> Copyright 2017 Carlos Castro </p>
+			<p id="copyright"> Copyright 2017 Carlos Castro </p>
 		</div>
 
-
-		<div id="box"> 
-			<div id="frame">
-				<h1 id="mynametext"> Carlos Castro </h1>
-			</div>
-		</div>
-
-
-		<nav> 
-				<ul>
-					<li><a href="index.html"> About </a> </li>
-					<li><a href="portfolio.html"> Portfolio </a> </li>
-					<li><a href="contact.html"> Contact </a> </li>
-				</ul>
-		</nav>
+	</div>
 	</div>
 </body>
 </html>
